Fix creative commons showing on collapsed sidebar

--- a/src/main/site/assets/less/style.less
+++ b/src/main/site/assets/less/style.less
@@ -203,6 +203,7 @@
     margin-top: 20px;
 
     .box-sizing();
+    .transition();
   }
 
   // -> Closed menu
@@ -247,6 +248,10 @@
           margin-left: -123px;
         }
       }
+    }
+
+    #cc {
+      opacity: 0;
     }
   }
 
